--- a/index.html
+++ b/index.html
@@ -76,10 +76,14 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Neural Information<br> Computing &amp;<br>Engineering<br>(NICE) Research Group</div>
-                <div class="intro-lead-in"></div>
+                <div class="intro-lead-in">Neuro Intelligence<br>Computing &amp;<br>Engineering<br>NICE Research Group</div>
+                <div class="">
+                    <img src="img/NICE_logo.png" class="img-responsive" alt="" style="width:220px">
+                    <br>
+                </div>
                 <a href="#about" class="page-scroll btn btn-xl">Learn More</a>
             </div>
+
         </div>
     </header>
 
