--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     <h2 class="section-heading">NICE Research</h2>
                 </div>
                 <div class="col-md-6">
-                    <p class="p-about">The NICE Research Group is an interdisciplinary research partnership by researchers from diverse backgrounds such as AI, neuroscience, neurology, computational sciences, engineering, etc. Currently, the collaboratory is made up of researchers from the Department of Biomedical Engineering, Universiti Malaya (UM), University of Malaya Medical Centre (UMMC), and the School of Electrical Engineering and Artificial Intelligence, Xiamen University Malaysia (XMUM), etc.</p>
+                    <p class="p-about">The NICE Research Group is an interdisciplinary research partnership by researchers from diverse backgrounds such as AI, neuroscience, neurology, computational sciences, engineering, etc. Currently, the collaboratory is made up of researchers from the Department of Biomedical Engineering, Universiti Malaya (UM), University of Malaya Medical Centre (UMMC), Harbin Institute of Technology (HIT), ShenZhen, and the School of Electrical Engineering and Artificial Intelligence, Xiamen University Malaysia (XMUM), etc.</p>
                     <p class="span-about">Please join us by writing to lisa@vvira.com.</p>
                 </div>
             </div>
@@ -113,6 +113,20 @@
                     <h3 class="section-subheading text-muted"></h3>
                 </div>
             </div>
+
+
+             <div class="row top-margin-md">
+                <div class="col-md-6">
+                    <img src="img/portfolio/neuroevo.png" class="img-responsive" alt="">
+                </div>
+
+                <div class="col-md-6">
+                    <!-- <p class="before-header top-margin-lg">Health Analytics, Technology &amp; Intelligence</p> -->
+                    <h2 class="section-heading">Brain-inspired Computing & Intelligence</h2>
+                    <h3 class="section-subheading text-muted bottom-margin-sm">This project aims to understand and create intelligence, in line with the long-term pursuit of artificial general intelligence, by drawing inspirations from the learning and evolution aspects of brain. Specifically, it focuses on Neuromorphic Computing and Neuroevolution.</h3>
+                </div>
+            </div>
+
             <div class="row top-margin-md">
                 <div class="col-md-6">
                     <img src="img/portfolio/neuro.jpeg" class="img-responsive" alt="">
@@ -120,25 +134,15 @@
                 <div class="col-md-6">
                     <!--<p class="before-header top-margin-lg">Health Analytics, Technology &amp; Intelligence</p>-->
                     <h2 class="section-heading">HATI Initiative</h2>
-                    <h3 class="section-subheading text-muted bottom-margin-sm">Healthcare AI &amp; Technology Initiative aims to enable safe and smart healthcare (SSH) in Malaysia. Currently, there are two main research projects. The first project uses AI to enhance epilepsy diagnosis, treatment, and management, while the second project uses AI for human motion analysis with applications to rehabilitation and sport. We are currently recruiting Graduate Research Assistant (GRA).</h3>
-                    <a href="./img/GRA_Recruitment_V3.pdf" class="btn btn-xl" download>GRA Vacancy (PDF)</a>
+                    <h3 class="section-subheading text-muted bottom-margin-sm">Healthcare AI &amp; Technology Initiative aims to enable safe and smart healthcare (SSH) in Malaysia. Currently, there are two main research projects. The first project uses AI to enhance brain computer interface for the diagnosis of brain diseases and affective computing, while the second project uses AI for human motion analysis with applications to rehabilitation and sport.</h3>
+                    <!-- <a href="./img/GRA_Recruitment_V3.pdf" class="btn btn-xl" download>GRA Vacancy (PDF)</a> -->
                 </div>
             </div>
 			
 			<br>
             <br>
 
-            <div class="row top-margin-md">
-                <div class="col-md-6">
-                    <img src="img/portfolio/neuroevo.png" class="img-responsive" alt="">
-                </div>
-
-                <div class="col-md-6">
-                    <!-- <p class="before-header top-margin-lg">Health Analytics, Technology &amp; Intelligence</p> -->
-                    <h2 class="section-heading">Neuroevolution</h2>
-                    <h3 class="section-subheading text-muted bottom-margin-sm">Neuroevolution is an alternative approach to design and train neural networks, inspired by the fact that brains themselves are the byproducts of an evolutionary process. Neuroevolution aims to automate the design of neural network architecture and it also differs from traditional deep learning (and deep reinforcement learning) by maintaining a population of solutions during search, enabling extreme exploration and massive parallelization. This project investigates neuroevolution for meta-learning and architecture search, in line with the long-term pursuit of artificial general intelligence.</h3>
-                </div>
-            </div>
+           
 
             <!--<div class="row top-margin-lg hidden-sm hidden-xs">
                 <div class="col-md-6">
