--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">Neuro Intelligence<br>Computing &amp;<br>Engineering<br>NICE Research Group</div>
+                <div class="intro-lead-in">NeuroIntelligence &amp;<br>Cognitive Engineering<br>NICE Research Group</div>
                 <div class="">
                     <img src="img/NICE_logo.png" class="img-responsive" alt="" style="width:220px">
                     <br>
