--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <div class="intro-lead-in">NeuroIntelligence &amp;<br>Computational Engineering<br><b>NICE</b> Research Group<br>Xiamen University Malaysia</div>
+                <div class="intro-lead-in">NeuroIntelligence &amp;<br>Computational Engineering<br><b>NICE</b> Research Group</div>
                 <h3 class="section-subheading text-muted bottom-margin-sm">Where The Nicest People Work Towards a Better World</b></h3>
                 <div class="">
                     <!-- <img src="img/NICE_logo.png" class="img-responsive" alt="" style="width:220px">
