--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <h2 class="section-heading">NICE Research</h2>
                 </div>
                 <div class="col-md-6">
-                    <p class="p-about">The NICE Research Group delves into the intersection of human and artificial intelligence. Our focus encompasses two main aspects: firstly, exploring brain functionality and its correlation with neurological disorders, with the aim of advancing personalized treatment methods and enabling the development of AI models inspired by the brain. Secondly, we investigate computational and AI-driven real-world applications, including digital health, brain source imaging, multimodal AI, and intelligent solar energy systems.</p>
+                    <p class="p-about">The NICE Research Group delves into the intersection of human and artificial intelligence. Our focus encompasses two main aspects: firstly, exploring brain functionality and its correlation with neurological disorders, with the aim of advancing personalized treatment methods and enabling the development of AI models (e.g., multimodal AI) inspired by the brain. Secondly, we investigate computational and AI-driven real-world applications, including brain computer interface, digital health, and intelligent solar energy systems.</p>
                     <!-- <p class="span-about">Please join us by writing to lisa@vvira.com.</p> -->
                 </div>
             </div>
